--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
           <img src="images/springsource.png">
         </td>
         <td>
-          <h1>HEj HEJ</h1>
+          <h1>HEj HEJ HEJSA</h1>
         </td>
       </tr>
     </table>
